[gd_scene load_steps=4 format=3 uid="uid://bv552rekvplwm"]

[ext_resource type="Script" path="res://game/src/Player/Ground/bullet/Slot.gd" id="1_cvifv"]
[ext_resource type="Texture2D" uid="uid://bp3sibhpvis8h" path="res://game/assets/environment/UI-Assets/Slot.png" id="1_vdfnd"]
[ext_resource type="Texture2D" uid="uid://dd6lw5eap0oe7" path="res://game/assets/environment/UI-Assets/SelectOverlay.png" id="2_w86ry"]

[node name="Panel" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
offset_right = 57.0
offset_bottom = 56.0
script = ExtResource("1_cvifv")

[node name="Slot" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(28, 28)
texture = ExtResource("1_vdfnd")

[node name="ResIcon" type="Sprite2D" parent="Slot"]
z_index = 2
texture_filter = 1
position = Vector2(1, -1)

[node name="SelectOverlay" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(28, 28)
texture = ExtResource("2_w86ry")

[node name="EquipOverlay" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 0, 0.443137)
texture_filter = 1
position = Vector2(28, 28)
texture = ExtResource("2_w86ry")
